# fuite-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml
assets/prefab/: scene.ron
assets/ui/: fps.ron  game.ron  loading.ron
resources/: bindings_config.ron  display_config.ron  game_config.ron
src/: logger.rs  main.rs
src/components/: bots.rs  color.rs  hum_shape.rs  mod.rs  physics.rs  rocket.rs
src/config/: game.rs  levels.rs  mod.rs
src/resources/: levels.rs  messages.rs  mod.rs
src/states/: game.rs  level_loading.rs  mod.rs  starting.rs
src/systems/: bots.rs  bundle.rs  camera.rs  fps.rs  levels.rs  mod.rs  physics.rs  player_input.rs  text.rs
